...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x8p-Zs-RH6">
                                <rect key="frame" x="253" y="270" width="74" height="35"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Delete"/>
                                <connections>
                                    <action selector="deleteClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dBY-J3-Ajl"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2OJ-ip-YB4">
                                <rect key="frame" x="22" y="270" width="124" height="35"/>
...
